# nix-templates

./: flake.nix
python/: .gitignore  flake.nix  pyproject.toml
rust/: .gitignore  flake.nix
