[tool.poetry]
name = "APP-DASH"
version = "0.1.0"
description = ""
authors = ["Vladimir Pouzanov <farcaller@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
APP-DASH = "APP_UNDERSCORE:app"
